// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Capital letters in story names converted into delimiters 1`] = `
"import * as React from \\"./_snowpack/pkg/react.js\\";

const capitalization$$blue$tiny$cat = React.lazy(() => import(\\"././tests/fixtures/capitalization.stories.js\\").then(module => {
  return {
    default: module.BlueTinyCat
  };
}));
const capitalization$$big$barking$dog = React.lazy(() => import(\\"././tests/fixtures/capitalization.stories.js\\").then(module => {
  return {
    default: module.BigBarkingDog
  };
}));

export let stories = {
  \\"capitalization--blue-tiny-cat\\": {
    component: capitalization$$blue$tiny$cat
  },
  \\"capitalization--big-barking-dog\\": {
    component: capitalization$$big$barking$dog
  }
};"
`;

exports[`Capital letters in the filename converted into delimiters 1`] = `
"import * as React from \\"./_snowpack/pkg/react.js\\";

const filename$capitalization$$test = React.lazy(() => import(\\"././tests/fixtures/filenameCapitalization.stories.js\\").then(module => {
  return {
    default: module.Test
  };
}));

export let stories = {
  \\"filename-capitalization--test\\": {
    component: filename$capitalization$$test
  }
};"
`;

exports[`Default title is used instead of the file name 1`] = `
"import * as React from \\"./_snowpack/pkg/react.js\\";

const title$$cat = React.lazy(() => import(\\"././tests/fixtures/default-title.stories.js\\").then(module => {
  return {
    default: module.Cat
  };
}));

export let stories = {
  \\"title--cat\\": {
    component: title$$cat
  }
};"
`;

exports[`Extract and merge story parameters 1`] = `
"import * as React from \\"./_snowpack/pkg/react.js\\";

const title$$cat = React.lazy(() => import(\\"././tests/fixtures/story-parameters.stories.js\\").then(module => {
  return {
    default: module.Cat
  };
}));
const title$$dog = React.lazy(() => import(\\"././tests/fixtures/story-parameters.stories.js\\").then(module => {
  return {
    default: module.Dog
  };
}));

export let stories = {
  \\"title--cat\\": {
    component: title$$cat,
    parameters: {
      \\"title\\": \\"Title\\",
      \\"parameters\\": {
        \\"baseweb\\": {
          \\"theme\\": \\"dark\\",
          \\"browsers\\": [\\"chrome\\", \\"firefox\\"],
          \\"width\\": \\"500px\\"
        },
        \\"links\\": true
      }
    }
  },
  \\"title--dog\\": {
    component: title$$dog,
    parameters: {
      \\"title\\": \\"Title\\",
      \\"parameters\\": {
        \\"baseweb\\": {
          \\"theme\\": \\"dark\\",
          \\"browsers\\": [\\"chrome\\", \\"webkit\\"]
        }
      }
    }
  }
};"
`;

exports[`Extract default parameters 1`] = `
"import * as React from \\"./_snowpack/pkg/react.js\\";

const title$$cat = React.lazy(() => import(\\"././tests/fixtures/default-parameters.stories.js\\").then(module => {
  return {
    default: module.Cat
  };
}));

export let stories = {
  \\"title--cat\\": {
    component: title$$cat,
    parameters: {
      \\"title\\": \\"Title\\",
      \\"parameters\\": {
        \\"baseweb\\": {
          \\"foo\\": \\"title\\"
        }
      }
    }
  }
};"
`;

exports[`Single file with two stories 1`] = `
"import * as React from \\"./_snowpack/pkg/react.js\\";

const animals$$cat = React.lazy(() => import(\\"././tests/fixtures/animals.stories.js\\").then(module => {
  return {
    default: module.Cat
  };
}));
const animals$$dog = React.lazy(() => import(\\"././tests/fixtures/animals.stories.js\\").then(module => {
  return {
    default: module.Dog
  };
}));

export let stories = {
  \\"animals--cat\\": {
    component: animals$$cat
  },
  \\"animals--dog\\": {
    component: animals$$dog
  }
};"
`;

exports[`Story name replaces named export as a story name 1`] = `
"import * as React from \\"./_snowpack/pkg/react.js\\";

const storyname$$doggo = React.lazy(() => import(\\"././tests/fixtures/storyname.stories.js\\").then(module => {
  return {
    default: module.Cat
  };
}));
const storyname$$capital$city = React.lazy(() => import(\\"././tests/fixtures/storyname.stories.js\\").then(module => {
  return {
    default: module.CapitalCity
  };
}));
const storyname$$champs$élysées = React.lazy(() => import(\\"././tests/fixtures/storyname.stories.js\\").then(module => {
  return {
    default: module.CapitalReplaced
  };
}));

export let stories = {
  \\"storyname--doggo\\": {
    component: storyname$$doggo
  },
  \\"storyname--capital-city\\": {
    component: storyname$$capital$city
  },
  \\"storyname--champs-\\\\xE9lys\\\\xE9es\\": {
    component: storyname$$champs$élysées
  }
};"
`;

exports[`Turn file name delimiters into spaces and levels correctly 1`] = `
"import * as React from \\"./_snowpack/pkg/react.js\\";

const our$animals$$mammals$$cat = React.lazy(() => import(\\"././tests/fixtures/our-animals--mammals.stories.js\\").then(module => {
  return {
    default: module.Cat
  };
}));

export let stories = {
  \\"our-animals--mammals--cat\\": {
    component: our$animals$$mammals$$cat
  }
};"
`;
